--- a/play/prototype/prototype.css
+++ b/play/prototype/prototype.css
@@ -1,6 +1,20 @@
 /*******  These are needed ********/
 
 
+/*.error-container {*/
+/*    margin: 5px 0;*/
+/*}*/
+
+.error {
+    padding: 0;
+    font-size: smaller;
+    font-style: italic;
+    font-weight: bold;
+    color: rgba(255, 0, 0, 0.7);
+    vertical-align: middle;
+}
+
+
 .list-card-col {
     white-space: nowrap;
     text-overflow: ellipsis;
